@@ -60,21 +60,40 @@ class GatewayProxy implements \JambageCom\Transactor\Domain\GatewayInterface
     public function init ($extensionKey)
     {
         $this->gatewayClass = '';
-        $this->extensionManagerConf = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf']['transactor']);
+        $this->extensionManagerConf = [];
+        if (
+            defined('TYPO3_version') &&
+            version_compare(TYPO3_version, '9.0.0', '>=')
+        ) {
+            $this->extensionManagerConf = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance(
+                \TYPO3\CMS\Core\Configuration\ExtensionConfiguration::class
+            )->get(TRANSACTOR_EXT);
+        } else { // before TYPO3 9
+            $this->extensionManagerConf = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf'][TRANSACTOR_EXT]);
+        }
+        $newExtensionManagerConf = [];
 
-        if (isset($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf'][$extensionKey])) {
+        if (
+            defined('TYPO3_version') &&
+            version_compare(TYPO3_version, '9.0.0', '>=')
+        ) {
+            $newExtensionManagerConf = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance(
+                \TYPO3\CMS\Core\Configuration\ExtensionConfiguration::class
+            )->get($extensionKey);
+        } else if (isset($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf'][$extensionKey])) { // before TYPO3 9
             $newExtensionManagerConf = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf'][$extensionKey]);
-            if (is_array($this->extensionManagerConf)) {
-                if (is_array($newExtensionManagerConf)) {
-                    $this->extensionManagerConf =
-                        array_merge(
-                            $this->extensionManagerConf,
-                            $newExtensionManagerConf
-                        );
-                }
-            } else {
-                $this->extensionManagerConf = $newExtensionManagerConf;
+        }
+
+        if (is_array($this->extensionManagerConf)) {
+            if (is_array($newExtensionManagerConf)) {
+                $this->extensionManagerConf =
+                    array_merge(
+                        $this->extensionManagerConf,
+                        $newExtensionManagerConf
+                    );
             }
+        } else {
+            $this->extensionManagerConf = $newExtensionManagerConf;
         }
 
         if (
@@ -172,6 +191,12 @@ class GatewayProxy implements \JambageCom\Transactor\Domain\GatewayInterface
     public function setTemplateFilename ($templateFilename)
     {
         $this->getGatewayObj()->setTemplateFilename($templateFilename);
+    }
+
+    public function getExtensionManagerConf ()
+    {
+        $result = $this->extensionManagerConf;
+        return $result;
     }
 
     public function getConf ()
