@@ -24,7 +24,7 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "php": "^5.6,^7.1",
+    "php": "^7.1",
     "typo3/cms-core": "^7.6,^8,7,^9.5,^10.4",
     "jambagecom/div2007": "^1.11"
   },
