@@ -16,7 +16,7 @@ $EM_CONF[$_EXTKEY] = array(
     'author_company' => '',
     'constraints' => array(
         'depends' => array(
-            'php' => '5.6.0-7.4.99',
+            'php' => '7.1.0-7.4.99',
             'typo3' => '7.6.0-10.4.99',
             'div2007' => '1.11.0-0.0.0',
         ),
